Fix button style on mobile

--- a/public/src/css/app.css
+++ b/public/src/css/app.css
@@ -125,7 +125,7 @@ h1 {
 	font-size: 20px;
 	padding: 10px 20px;
 	border-radius: 6px;
-	/*border: 0;
-	background: #E86F0C;
-	color: #000;*/
+	background-color: #c0c0c0;
+	border-right: 2px solid #6c6c6c outset;
+	border-bottom: 2px solid #6c6c6c outset;
 }
